--- a/.github/workflows/SearchObjects_build_and_test_on_main.yml
+++ b/.github/workflows/SearchObjects_build_and_test_on_main.yml
@@ -13,6 +13,11 @@ jobs:
     uses: FrendsPlatform/FrendsTasks/.github/workflows/linux_build_main.yml@main
     with:
       workdir: Frends.LDAP.SearchObjects
-      prebuild_command: docker run -d -i --rm -p 10389:10389 dwimberger/ldap-ad-it
+      prebuild_command: |
+        docker run -d -i --rm -p 10389:10389 dwimberger/ldap-ad-it
+        docker run -d -i --rm -p 20389:389 osixia/openldap:1.5.0 \
+          --env LDAP_ORGANISATION="Test Org" \
+          --env LDAP_DOMAIN="example.org" \
+          --env LDAP_ADMIN_PASSWORD="admin"
     secrets:
       badge_service_api_key: ${{ secrets.BADGE_SERVICE_API_KEY }}
