add sleep to workflows

--- a/.github/workflows/SearchObjects_build_and_test_on_push.yml
+++ b/.github/workflows/SearchObjects_build_and_test_on_push.yml
@@ -20,10 +20,8 @@ jobs:
           --env LDAP_DOMAIN="example.org" \
           --env LDAP_ADMIN_PASSWORD="admin"
 
-        for i in {1..30}; do
-            nc -z 127.0.0.1 20389 && echo "LDAP ready" && break
-            echo "Waiting for LDAP..." && sleep 1
-        done
+        echo "Sleeping to wait for osixia LDAP..."
+        sleep 20
     secrets:
       badge_service_api_key: ${{ secrets.BADGE_SERVICE_API_KEY }}
       test_feed_api_key: ${{ secrets.TASKS_TEST_FEED_API_KEY }}
